Fotter style on mobile corrected

--- a/mobile.css
+++ b/mobile.css
@@ -402,6 +402,8 @@ nav {
   text-align: center;
   width: 100%;
   display: block;
+  color: #757;
+  margin: 10px 0;
 }
 
 /*cookies*/
